Fix icon overflow in TimelineState + add responsiveness to number of icons

--- a/src/components/Replays/CSS/ReplayView.css
+++ b/src/components/Replays/CSS/ReplayView.css
@@ -1,6 +1,6 @@
 .ReplayView {
     width: 90%;
-    margin: 30px auto;
+    margin: 30px auto 0;
 }
 
 .ReplayView--no-replays {
