--- a/src/components/Replays/CSS/TimelineArea.css
+++ b/src/components/Replays/CSS/TimelineArea.css
@@ -3,7 +3,7 @@
 }
 
 .TimelineArea {
-    margin: 40px 0;
+    margin: 40px 0 0;
 }
 
 .TimelineArea__chart-area {
